# Project/ApiXUnitTestProject/Integration.PetTestDto.cs
@@ -5,7 +5,7 @@
         /// <summary>
         ///
         /// </summary>
-        public class PetTestDto
+        public class PetTestDto 
         {
             public PetTestDto(int id, string name, string description)
             {
@@ -33,6 +33,27 @@
             /// 
             /// </summary>
             public string Description { get; set; }
+
+            /// <summary>
+            /// 
+            /// </summary>
+            public OwnerTestDto Owner { get; set; }
+
+            /// <summary>
+            /// OwnerDto
+            /// </summary>
+            public class OwnerTestDto 
+            {
+                /// <summary>
+                /// 
+                /// </summary>
+                public int Id { get; set; }
+
+                /// <summary>
+                /// 
+                /// </summary>
+                public string Name { get; set; }
+            }
         }
 
     }
